reduce the number of fields showed by default to make the page less heavy

--- a/supercon2/templates/automatic_database.html
+++ b/supercon2/templates/automatic_database.html
@@ -194,10 +194,10 @@
                         { text: 'Hash', value: 'hash', hidden: true, filter: this.hashFilter },
                         { text: 'Timestamp', value: 'timestamp', hidden: true, filter: this.timestampFilter },
                         { text: 'DOI', value: 'doi', hidden: false, filter: this.doiFilter },
-                        { text: 'Authors', value: 'authors', width: 300, hidden: false, filter: this.authorsFilter },
-                        { text: 'Title', value: 'title', width: 500, hidden: false, filter: this.titleFilter },
-                        { text: 'Publisher', value: 'publisher', hidden: false, filter: this.publisherFilter },
-                        { text: 'Journal', value: 'journal', hidden: false, filter: this.journalFilter },
+                        { text: 'Authors', value: 'authors', width: 300, hidden: true, filter: this.authorsFilter },
+                        { text: 'Title', value: 'title', width: 500, hidden: true, filter: this.titleFilter },
+                        { text: 'Publisher', value: 'publisher', hidden: true, filter: this.publisherFilter },
+                        { text: 'Journal', value: 'journal', hidden: true, filter: this.journalFilter },
                         { text: 'Year', value: 'year', hidden: false, filter: this.yearFilter },
                         // CONFIRM: check column locations for type, status and flag
                         { text: 'Type', value: 'type', hidden: false, filter: this.typeFilter },
