get training data, add id in the training data table

--- a/supercon2/templates/training_data.html
+++ b/supercon2/templates/training_data.html
@@ -47,6 +47,7 @@
             return {
                 selectedHeaders: [],
                 headers: [
+                    {text: 'id', value: 'id', hidden: true},
                     {text: 'text', value: 'annotated_text', hidden: false},
                     {text: 'hash', value: 'hash', hidden: false}
                 ],
