make a deep copy so that the record is not updated in the table

--- a/supercon2/templates/automatic_database.html
+++ b/supercon2/templates/automatic_database.html
@@ -497,7 +497,8 @@
                     )
                 },
                 editItem(item) {
-                    this.editedItem = item
+                    // make a deep copy so that the record is not updated in the table
+                    this.editedItem = JSON.parse(JSON.stringify(item))
                     this.dialog = true
                 },
                 close() {
