--- a/supercon2/templates/automatic_database.html
+++ b/supercon2/templates/automatic_database.html
@@ -20,7 +20,7 @@
             </v-select>
             <v-row justify="space-between" class="ma-0">
                 <v-checkbox v-model="expandFilter" label="expand filter" class="mt-0"></v-checkbox>
-                <v-btn @click="createItem" Depressed>New Item</v-btn>
+                <v-btn @click="openCreateItemDialog" Depressed>New Item</v-btn>
             </v-row>
             <v-data-table v-model="selectedItems" :headers="showHeaders" :items="items" :dense="true" single-select
                 loading-text="loading ..." :multi-sort="true" class="elevation-1"
@@ -64,7 +64,7 @@
                     <v-checkbox :input-value="item.flag" @click="toggleFlag(item)"></v-checkbox>
                 </template>
                 <template v-slot:item.actions="{ item }">
-                    <v-icon small class="mr-2" @click="editItem(item)">
+                    <v-icon small class="mr-2" @click="openEditItemDialog(item)">
                         mdi-pencil
                     </v-icon>
                 </template>
@@ -452,12 +452,12 @@
                         )
                     )
                 },
-                editItem(item) {
+                openEditItemDialog(item) {
                     // make a deep copy so that the record is not updated in the table
                     this.editedItem = JSON.parse(JSON.stringify(item))
                     this.dialog = true
                 },
-                createItem() {
+                openCreateItemDialog() {
                     this.editedItem = {}
                     this.dialog = true
                 }
@@ -466,34 +466,37 @@
                     this.dialog = false
                 },
                 async save() {
-                    let url = ''
-                    // TODO: refactor if else
                     if (this.editedItem.id) {
-                        url = '{{ url_for("supercon.update_record", id = "id") }}'
-                        url = url.replace(
-                            "id",
-                            this.editedItem.id
-                        )
-                        // delete as non-editable item
-                        delete this.editedItem.flag
-                        delete this.editedItem.status
-                        delete this.editedItem.type
-                        // TODO: add try catch
-                        await axios.put(url, this.editedItem)
+                        await this.updateItem()
                     } else {
-                        url = '{{ url_for("supercon.create_record") }}'
-                        try {
-                            console.log(this.editedItem)
-                            await axios.post(url, this.editedItem)
-                        } catch (e) {
-                            console.error(e)
-                            window.alert(e.response.data.message)
-                        } finally {
-                            //
-                        }
+                        await this.createItem()
                     }
                     this.loadItems()
                     this.close()
+                },
+                async createItem() {
+                    const url = '{{ url_for("supercon.create_record") }}'
+                    try {
+                        await axios.post(url, this.editedItem)
+                    } catch (e) {
+                        console.error(e)
+                        window.alert(e.response.data.message)
+                    } finally {
+                        //
+                    }
+                },
+                async updateItem() {
+                    let url = '{{ url_for("supercon.update_record", id = "id") }}'
+                    url = url.replace(
+                        "id",
+                        this.editedItem.id
+                    )
+                    // delete as non-editable item
+                    delete this.editedItem.flag
+                    delete this.editedItem.status
+                    delete this.editedItem.type
+                    // TODO: add try catch
+                    await axios.put(url, this.editedItem)
                 },
             },
             created() {
