--- a/supercon2/templates/index.html
+++ b/supercon2/templates/index.html
@@ -46,10 +46,11 @@
         <div class="modal-body row">
             <div class="col-md-4">
                 <ul>
-                    <li><a href="{{ url_for('supercon.get_manual_database') }}">Manually extracted database</a></li>
-                    <li><a href="{{ url_for('supercon.get_automatic_database') }}">Automatically extracted database</a></li>
-                    <li><a href="{{ url_for('supercon.get_stats') }}">(Automatic) Database statistics</a></li>
-                    <li><a href="http://falcon.nims.go.jp/superconductors" target="_blank">PDF document live process</a>
+{#                    <li><a href="{{ url_for('supercon.get_manual_database') }}">Manually extracted database</a></li>#}
+                    <li><a href="{{ url_for('supercon.get_automatic_database') }}">Database</a></li>
+                    <li><a href="{{ url_for('supercon.get_stats') }}">Statistics</a></li>
+                    <li><a href="{{ url_for('supercon.get_training_data') }}">Training data management</a></li>
+                    <li><a href="http://falcon.nims.go.jp/superconductors" target="_blank">Grobid superconductors</a>
                     </li>
                 </ul>
             </div>
