remove section and subesection by default

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -146,8 +146,8 @@
                         { text: 'Critical Temperature Measurement Method', value: 'criticalTemperatureMeasurementMethod', hidden: true, filter: this.criticalTemperatureMeasurementMethodFilter, filterKeyword: '' },
                         // { text: 'Critical Temperature Measurement MethodId', value: 'criticalTemperatureMeasurementMethodId', hidden: true },
                         { text: 'Link Type', value: 'linkType', hidden: true, filter: this.linkTypeFilter, filterKeyword: '' },
-                        { text: 'Section', value: 'section', hidden: false, filter: this.sectionFilter, filterKeyword: '' },
-                        { text: 'Subsection', value: 'subsection', hidden: false, filter: this.subsectionFilter, filterKeyword: '' },
+                        { text: 'Section', value: 'section', hidden: true, filter: this.sectionFilter, filterKeyword: '' },
+                        { text: 'Subsection', value: 'subsection', hidden: true, filter: this.subsectionFilter, filterKeyword: '' },
                         { text: 'Path', value: 'path', hidden: true, filter: this.pathFilter, filterKeyword: '' },
                         { text: 'Filename', value: 'filename', hidden: true, filter: this.filenameFilter, filterKeyword: '' },
                         { text: 'Hash', value: 'hash', hidden: true, filter: this.hashFilter, filterKeyword: '' },
