--- a/supercon2/templates/index.html
+++ b/supercon2/templates/index.html
@@ -48,6 +48,7 @@
                 <ul>
 {#                    <li><a href="{{ url_for('supercon.get_manual_database') }}">Manually extracted database</a></li>#}
                     <li><a href="{{ url_for('supercon.get_automatic_database') }}">Database</a></li>
+{#                    <li><a href="https://supercon2.readthedocs.io">Documentation [TBD]</a></li>#}
                     <li><a href="{{ url_for('supercon.get_stats') }}">Statistics</a></li>
                     <li><a href="{{ url_for('supercon.get_training_data') }}">Training data management</a></li>
                     <li><a href="http://falcon.nims.go.jp/superconductors" target="_blank">Grobid superconductors</a>
@@ -61,7 +62,6 @@
                     This database is an application to extract automatically superconductors material and
                     their properties from superconductors-related scientific literature.
                 </p>
-                <p>The interface can be used to view the extracted properties.</p>
                 <p>
                     <strong>References</strong>
                     <ul>
