make a text field's label a placeholder for UI

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -48,7 +48,7 @@
                                 </v-radio>
                             </v-radio-group>
                             <template v-else-if="header.value === 'document' || header.value === 'actions'"></template>
-                            <v-text-field v-model="header.filterKeyword" type="text" label="keyword" v-else
+                            <v-text-field v-model="header.filterKeyword" type="text" placeholder="keyword" v-else
                                 hide-details>
                             </v-text-field>
 
