remove type and status on a dialog for UI

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -29,19 +29,7 @@
                 <template v-slot:body.prepend>
                     <tr>
                         <td v-for="header in showHeaders" :key="header.value">
-                            <v-radio-group v-model="header.filterKeyword" v-if="header.value === 'type'" dense
-                                hide-details :readonly="!expandFilter">
-                                <v-radio v-for="item in ['all', 'manual', 'automatic']" :key="item" :label="item"
-                                    :value="item" v-show="expandFilter || item === header.filterKeyword">
-                                </v-radio>
-                            </v-radio-group>
-                            <v-radio-group v-model="header.filterKeyword" v-else-if="header.value === 'status'" dense
-                                hide-details>
-                                <v-radio v-for="item in ['all', 'valid', 'invalid']" :key="item" :label="item"
-                                    :value="item" v-show="expandFilter || item === header.filterKeyword">
-                                </v-radio>
-                            </v-radio-group>
-                            <v-radio-group v-model="header.filterKeyword" v-else-if="header.value === 'flag'" dense
+                            <v-radio-group v-model="header.filterKeyword" v-if="header.value === 'flag'" dense
                                 hide-details>
                                 <v-radio v-for="item in ['all', 'flag', 'unflag']" :key="item" :label="item"
                                     :value="item" v-show="expandFilter || item === header.filterKeyword">
@@ -82,9 +70,7 @@
                                     <v-text-field v-model="editedItem[header.value]" :label="header.text"
                                         v-else-if="isRequiredOnDialog(header.value)" :rules="[rules.required]">
                                     </v-text-field>
-                                    <v-text-field v-model="editedItem[header.value]" :label="header.text"
-                                        v-else-if="isHiddenOnDialog(header.value)" disabled v-show="false">
-                                    </v-text-field>
+                                    <template v-else-if="isHiddenOnDialog(header.value)"></template>
                                     <v-text-field v-model="editedItem[header.value]" :label="header.text" v-else>
                                     </v-text-field>
                                 </v-col>
@@ -159,9 +145,9 @@
                         { text: 'Journal', value: 'journal', hidden: true, filter: this.journalFilter, filterKeyword: '' },
                         { text: 'Year', value: 'year', hidden: false, filter: this.yearFilter, filterKeyword: '' },
                         // CONFIRM: check column locations for type, status and flag
-                        { text: 'Type', value: 'type', hidden: false, filter: this.typeFilter, filterKeyword: 'all' },
-                        { text: 'Status', value: 'status', sortable: false, hidden: false, filter: this.statusFilter, filterKeyword: 'all' },
                         { text: 'Flag', value: 'flag', sortable: false, hidden: false, filter: this.flagFilter, filterKeyword: 'all' },
+                        { text: 'Type', value: 'type', hidden: true },
+                        { text: 'Status', value: 'status', sortable: false, hidden: true },
                         { text: 'View Document', value: 'document', sortable: false, hidden: false },
                         { text: 'Actions', value: 'actions', sortable: false, hidden: false },
                         // { text: 'Doc URL', value: 'doc_url', hidden: true},
@@ -228,12 +214,13 @@
                         })
                     })
                 },
+                // TODO: this method name should be isNotEditableOnDialog
                 isEditableOnDialog(key) {
-                    const keys = ['id', 'type', 'status', 'flag']
+                    const keys = ['id', 'flag']
                     return keys.includes(key)
                 },
                 isHiddenOnDialog(key) {
-                    const keys = ['document', 'actions']
+                    const keys = ['type', 'status', 'document', 'actions']
                     return keys.includes(key)
                 },
                 isRequiredOnDialog(key) {
@@ -406,24 +393,6 @@
                     }
                     return target.indexOf(keyword) > -1
                 },
-                typeFilter(value, search, item) {
-                    const keyword = this.headerObject.type.filterKeyword
-                    switch (keyword) {
-                        case 'all':
-                            return true
-                        default:
-                            return item.type === keyword
-                    }
-                },
-                statusFilter(value, search, item) {
-                    const keyword = this.headerObject.status.filterKeyword
-                    switch (keyword) {
-                        case 'all':
-                            return true
-                        default:
-                            return item.status === keyword
-                    }
-                },
                 flagFilter(value, search, item) {
                     const keyword = this.headerObject.flag.filterKeyword
                     switch (keyword) {
@@ -468,8 +437,7 @@
                 openCreateItemDialog() {
                     this.editedItem = {}
                     this.dialog = true
-                }
-                ,
+                },
                 close() {
                     this.dialog = false
                 },
